--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -2,3 +2,8 @@ h1, form {
     font-family: Hiragino Sans GB, Helvetica, sans-serif;
     text-align: center;
 }
+
+.container {
+    margin-top : 100px;
+    margin-bottom: 150px;
+}
