--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,15 +1,17 @@
-<h1>欢迎来到成长树</h1>
-<form #userForm="ngForm" (ngSubmit)="verifyUser(userForm.value)" novalidate>
-  <label>请登录</label><br>
-  <input type="text" name="username" placeholder="用户名" required [(ngModel)]="username" /><br/>
-  <input type="password" name="password" placeholder="密码" required [(ngModel)]="password" /><br/>
-  <input type="submit" [disabled]="!userForm.valid" value="登录" />
-  <button routerLink="/register">注册</button>
-</form>
-
-
-<tr *ngFor="let kk of Repdata; let i = index">
-  <td>{{i + 1}}</td>
-  <td>{{kk.username}}</td>
-  <td>{{kk.password}}</td>
-</tr>  
+<div class="container">
+    <h1>Welcome! Please sign in</h1>
+    <form #userForm="ngForm" (ngSubmit)="verifyUser(userForm.value)" novalidate>
+        <div class="form-group">
+            <label>Username</label>
+            <input type="text" name="username" placeholder="Username" required [(ngModel)]="username" />
+        </div>
+        <div class="form-group">
+            <label>Password</label>
+            <input type="password" name="password" placeholder="Password" required [(ngModel)]="password" />
+        </div>
+        <div class="form-group">
+            <input type="submit" class="btn btn-primary" [disabled]="!userForm.valid" value="Sign in" />
+            <button class="btn btn-primary" routerLink="/register">Sign up</button>
+        </div>
+    </form>
+</div>
