--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,4 +1,24 @@
 <div class="container">
-    <p>{{ career }}</p>
-    <button (click)="modifyCareer()">insert</button>
+    <p>Here's all the careers</p>
+    <!--<p *ngFor="let job of jobs">{{ job.Name }}</p>-->
+    <ngb-accordion [closeOthers]="true">
+        <ngb-panel *ngFor="let career of careers" id="career-{{career.No}}" title="{{career.CName}}">
+            <ng-template ngbPanelContent>
+                <ngb-accordion [closeOthers]="true">
+                    <ngb-panel *ngFor="let sub of career.Sub" id="career-{{career.No}}-{{sub.No}}" title="{{sub.CName}}">
+                        <ng-template ngbPanelContent>
+                            <ngb-accordion [closeOthers]="true">
+                                <ngb-panel *ngFor="let s of sub.Sub" id="career-{{career.No}}-{{sub.No}}-{{s.No}}" title="{{s.CName}}">
+                                    <ng-template ngbPanelContent>
+                                        content
+                                    </ng-template>
+                                </ngb-panel>
+                            </ngb-accordion>
+                        </ng-template>
+                    </ngb-panel>
+                </ngb-accordion>
+            </ng-template>
+        </ngb-panel>
+    </ngb-accordion>
 </div>
+
