--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,10 +4,11 @@
             <div class="col-4 offset-1 col-sm-2">
                 <h5>Links</h5>
                 <ul class="list-unstyled">
-                    <li><a href="/index">Home</a></li>
-                    <li><a href="/tree">Tree</a></li>
-                    <li><a href="/mapt">About</a></li>
-                    <li><a href="/profile">Profile</a></li>
+                    <li><a routerLink="/index">Home</a></li>
+                    <li><a routerLink="/tree">Tree</a></li>
+                    <li><a routerLink="/map">Map</a></li>
+                    <li><a routerLink="/practice">Practice</a></li>
+                    <li><a routerLink="/profile">Profile</a></li>
                 </ul>
             </div>
             <div class="col-7 col-sm-5">
