--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,15 +3,16 @@
         <a class="navbar-brand" href="#">
             <i class="fa fa-tree text-success"></i>
         </a>  
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#Navbar" (click)="toggleCollapse()">
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#Navbar">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="Navbar" [class.collapse]="isCollapsed">
+        <div class="collapse navbar-collapse" id="Navbar">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active"><a class="nav-link" (click)="toggleCollapse()" routerLink=""><span class="fa fa-home fa-lg"></span> Home</a></li>
-                <li class="nav-item active"><a class="nav-link" (click)="toggleCollapse()" routerLink="/tree"><span class="fa fa-list fa-lg"></span> Tree</a></li>
-                <li class="nav-item active"><a class="nav-link" (click)="toggleCollapse()" routerLink="/map"><span class="fa fa-usb fa-lg"></span> Map</a></li>
-                <li class="nav-item active"><a class="nav-link" (click)="toggleCollapse()" routerLink="/profile"><span class="fa fa-address-card fa-lg"></span> Profile</a></li>
+                <li class="nav-item active"><a class="nav-link" routerLink=""><span class="fa fa-home fa-lg"></span> Home</a></li>
+                <li class="nav-item active"><a class="nav-link" routerLink="/tree"><span class="fa fa-list fa-lg"></span> Tree</a></li>
+                <li class="nav-item active"><a class="nav-link" routerLink="/map"><span class="fa fa-usb fa-lg"></span> Map</a></li>
+                <li class="nav-item active"><a class="nav-link" routerLink="/practice"><span class="fa fa-th-list fa-lg"></span> Practice</a></li>
+                <li class="nav-item active"><a class="nav-link" routerLink="/profile"><span class="fa fa-address-card fa-lg"></span> Profile</a></li>
             </ul>
             <span routerLink="/login" class="navbar-item active" *ngIf="username==='guest'">
                 <span class="fa fa-sign-in"></span> Sign in&emsp;
