improve early-education component

--- a/src/app/example/example.component.html
+++ b/src/app/example/example.component.html
@@ -1,4 +1,4 @@
-<p>
-    example works!
-</p>
-<p>{{example.content}}</p>
+<div class="container">
+    <h5>{{earlyEdu.age}}</h5>
+    <h5>{{earlyEdu.help.cn}}</h5>
+</div>
