--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,6 +13,7 @@
                 <li class="nav-item active"><a class="nav-link" routerLink="/map"><span class="fa fa-usb fa-lg"></span> Map</a></li>
                 <li class="nav-item active"><a class="nav-link" routerLink="/practice"><span class="fa fa-th-list fa-lg"></span> Practice</a></li>
                 <li class="nav-item active"><a class="nav-link" routerLink="/profile"><span class="fa fa-address-card fa-lg"></span> Profile</a></li>
+                <li class="nav-item active"><a class="nav-link" routerLink="/power"><span class="fa fa-address-card fa-lg"></span> Power</a></li>
             </ul>
             <span routerLink="/login" class="navbar-item active" *ngIf="username==='guest'">
                 <span class="fa fa-sign-in"></span> Sign in&emsp;
