--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -3,6 +3,15 @@
     <div class="row row-content">
         <div class="col-12 my-3">
             <div class="media">
+                <img src="assets/child.png" class="d-flex mr-3 img-thumbnail align-self-center" width="200px" height="200px">
+                <div class="media-body">
+                        <p class="mt-5"><span class="badge badge-danger">NEW</span> Early education.</p>
+                        <button class="btn btn-primary" routerLink="/early-education">Try it!</button>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 my-3">
+            <div class="media">
                 <img src="assets/driving_test.png" class="d-flex mr-3 img-thumbnail align-self-center" width="200px" height="200px">
                 <div class="media-body">
                         <p class="mt-5"><span class="badge badge-danger">NEW</span> Driving test preparation.</p>
