--- a/src/app/power/power.component.css
+++ b/src/app/power/power.component.css
@@ -1,9 +1,4 @@
 text {
-    fill: white;
+    fill: blue;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-line {
-    stroke: #ffc107;
-    stroke-width: 5;
 }
