add story component, play story audio

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -3,7 +3,16 @@
     <div class="row row-content">
         <div class="col-12 my-3">
             <div class="media">
-                <img src="assets/child.png" class="d-flex mr-3 img-thumbnail align-self-center" width="200px" height="200px">
+                <img src="assets/index/story.png" class="d-flex mr-3 img-thumbnail align-self-center" width="200px" height="200px">
+                <div class="media-body">
+                        <p class="mt-5"><span class="badge badge-danger">NEW</span> Child Stories.</p>
+                        <button class="btn btn-primary" routerLink="/story">Try it!</button>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 my-3">
+            <div class="media">
+                <img src="assets/index/child.png" class="d-flex mr-3 img-thumbnail align-self-center" width="200px" height="200px">
                 <div class="media-body">
                         <p class="mt-5"><span class="badge badge-danger">NEW</span> Early education.</p>
                         <button class="btn btn-primary" routerLink="/early-education">Try it!</button>
@@ -12,7 +21,7 @@
         </div>
         <div class="col-12 my-3">
             <div class="media">
-                <img src="assets/driving_test.png" class="d-flex mr-3 img-thumbnail align-self-center" width="200px" height="200px">
+                <img src="assets/index/driving_test.png" class="d-flex mr-3 img-thumbnail align-self-center" width="200px" height="200px">
                 <div class="media-body">
                         <p class="mt-5"><span class="badge badge-danger">NEW</span> Driving test preparation.</p>
                         <button class="btn btn-primary" routerLink="/driving-test">Try it!</button>
@@ -21,7 +30,20 @@
         </div>
         <div class="col-12 my-3">
             <div class="media">
-                <img src="assets/tree.jpg" class="d-flex mr-3 img-thumbnail align-self-center" width="200px" height="200px">
+                <img src="assets/index/tree1.png" class="d-flex mr-3 img-thumbnail align-self-center" width="200px" height="200px">
+                <div class="media-body">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Set up your goal</li>
+                        <li class="list-group-item">Find a clear path</li>
+                        <li class="list-group-item">Several empathic examples</li>
+                        <li class="list-group-item">Lots of practice</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 my-3">
+            <div class="media">
+                <img src="assets/index/tree2.png" class="d-flex mr-3 img-thumbnail align-self-center" width="200px" height="200px">
                 <div class="media-body">
                      <p class="mt-5">All knowledge connected. Find your position. Aim your target.</p>
                 </div>
@@ -29,7 +51,7 @@
         </div>
         <div class="col-12 my-3">
             <div class="media">
-                <img src="assets/expand.jpg" class="d-flex mr-3 img-thumbnail align-self-center" width="200px" height="200px">
+                <img src="assets/index/expand.jpg" class="d-flex mr-3 img-thumbnail align-self-center" width="200px" height="200px">
                 <div class="media-body">
                     <p class="mt-5">Expand your knowledge. See the world from a higher place.</p>  
                 </div>
@@ -37,7 +59,7 @@
         </div>
         <div class="col-12 my-3">
             <div class="media">
-                <img src="assets/practice.png" class="d-flex mr-3 img-thumbnail align-self-center" width="200px" height="200px">
+                <img src="assets/index/practice.png" class="d-flex mr-3 img-thumbnail align-self-center" width="200px" height="200px">
                 <div class="media-body">
                     <p class="mt-5"> Practice makes progress. Practice makes perfect.</p>
                 </div>
